--- a/KIMO.CODE/KIMO.MVC/KIMO.MVC.csproj
+++ b/KIMO.CODE/KIMO.MVC/KIMO.MVC.csproj
@@ -12,6 +12,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.SpaProxy" Version="7.0.18" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="8.0.0" />
   </ItemGroup>
 
   <ItemGroup>
